--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,48 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+---
+interface Props {
+  title: string;
+  description?: string;
+}
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+const { title, description } = Astro.props;
+const canonicalURL = new URL(Astro.url).href;
+---
+
+<html lang="es" class="w-full h-full">
+  <head>
+    <meta charset="utf-8" />
+    <title>{title}</title>
+    <link rel="icon" type="image/svg+xml" class="light" href="/favicon.svg" />
+    <link rel="canonical" href={canonicalURL} />
+    <link href="/src/styles/global.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <meta name="title" content={title} />
+    <meta name="description" content={description} />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content={canonicalURL} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <!-- <meta property="og:image" content={ogImageURL} /> -->
+    <!-- <meta property="og:image:alt" content={ogImage.alt} /> -->
+    <meta property="og:locale" content="en_GT" />
+    <!-- <meta property="twitter:image" content={ogImageURL} /> -->
+    <meta name="robots" content="follow, index" />
+  </head>
+  <body class="w-full h-full flex flex-col dark:bg-zinc-900 bg-zinc-100">
+    <div
+      aria-hidden="true"
+      class="pointer-events-none absolute inset-0 h-max w-full m-auto grid grid-cols-2 -space-x-52 opacity-40 dark:opacity-20"
+    >
+      <div
+        class="blur-[106px] h-56 bg-gradient-to-br from-primary to-purple-400 dark:from-blue-700"
+      >
+      </div>
+      <div
+        class="blur-[106px] h-32 bg-gradient-to-r from-cyan-400 to-sky-300 dark:to-indigo-600"
+      >
+      </div>
+    </div>
+    <slot />
+  </body>
+</html>
