--- a/src/pages/add.astro
+++ b/src/pages/add.astro
@@ -1,19 +1,19 @@
 ---
-import { getUser } from "@lib/utils";
+import { getUser, redirectToSignin } from "@lib/utils";
 import Layout from "@layouts/Layout.astro";
 import AppLayout from "@layouts/AppLayout.astro";
 import EthicalRouteDropzone from "@components/EthicalRouteDropzone";
 
-/* Get session cookie */
+// Obtener cookie de sesión
 const sessionCookie = Astro.cookies.get("session")?.value ?? null;
 if (!sessionCookie) {
-  return Astro.redirect("/signin");
+  return redirectToSignin();
 }
 
-/* Verify session cookie and get user */
+// Verificar sesión y usuario
 const user = await getUser(sessionCookie);
 if (!user) {
-  return Astro.redirect("/signin");
+  return redirectToSignin();
 }
 ---
 
@@ -46,7 +46,7 @@ if (!user) {
           Agregar caso ético
         </h1>
       </section>
-      <EthicalRouteDropzone />
+      <EthicalRouteDropzone client:load />
     </main>
   </AppLayout></Layout
 >
