--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="Home">
+<Layout title="Inicio - Rutas Éticas">
   <main class="relative py-16">
     <div class="relative">
       <div class="flex items-center justify-center -space-x-2">
@@ -10,8 +10,8 @@ import Layout from "@layouts/Layout.astro";
           loading="lazy"
           width="200"
           height="200"
-          src="./images/logo.svg"
-          alt="member photo"
+          src="/images/logo.svg"
+          alt="Logo de Rutas Éticas"
           class="rounded-full object-cover"
         />
       </div>
@@ -19,7 +19,7 @@ import Layout from "@layouts/Layout.astro";
         <h1
           class="text-center text-4xl font-bold text-gray-800 dark:text-white md:text-5xl"
         >
-          Rutas Ética
+          Rutas Éticas
         </h1>
         <div class="mt-6 m-auto md:w-8/12 lg:w-7/12">
           <p class="prose mx-auto dark:prose-invert text-justify">
