--- a/src/layouts/AppLayout.astro
+++ b/src/layouts/AppLayout.astro
@@ -1,5 +1,6 @@
 ---
 import SignoutButton from "@components/SignoutButton";
+const user = Astro.locals.user;
 ---
 
 <nav class="dark:bg-zinc-950 bg-zinc-50 border-b dark:border-zinc-800">
@@ -18,24 +19,30 @@ import SignoutButton from "@components/SignoutButton";
       Rutas éticas
     </a>
     <div class="flex gap-3 items-center">
-      <a
-        class="flex gap-1 text-violet-600 hover:text-violet-700 border border-violet-200 dark:border-violet-800 dark:hover:border-violet-500 dark:hover:text-white hover:border-violet-300 dark:text-violet-200 dark:bg-violet-800 dark:hover:bg-violet-700 bg-violet-200 px-3 py-1 rounded-md font-medium"
-        href="/add/"
-        ><span>Nuevo</span>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="w-6 h-6"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-        </svg>
-      </a>
+      {
+        user && user.isAdmin && (
+          <a
+            class="flex gap-1 text-violet-600 hover:text-violet-700 border border-violet-200 dark:border-violet-800 dark:hover:border-violet-500 dark:hover:text-white hover:border-violet-300 dark:text-violet-200 dark:bg-violet-800 dark:hover:bg-violet-700 bg-violet-200 px-3 py-1 rounded-md font-medium"
+            href="/add/"
+          >
+            <span>Nuevo</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
+              />
+            </svg>
+          </a>
+        )
+      }
       <SignoutButton client:idle />
     </div>
   </div>
