--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -3,17 +3,17 @@ import Layout from "@layouts/Layout.astro";
 import LoginForm from "@components/LoginForm";
 import { getUser } from "@lib/utils";
 
-/* Get session cookie */
 const sessionCookie = Astro.cookies.get("session")?.value ?? null;
 if (sessionCookie) {
   const user = await getUser(sessionCookie);
+  // Si el usuario ya tiene una sesión válida, redirigir al dashboard.
   if (user) {
     return Astro.redirect("/dashboard/", 302);
   }
 }
 ---
 
-<Layout title="Sign in to birthday tracker">
+<Layout title="Iniciar Sesión - Rutas Éticas">
   <main class="w-full h-full flex flex-col items-center justify-center p-4">
     <section class="w-full max-w-md">
       <h1
