--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -1,21 +1,31 @@
 ---
 import RegisterForm from "@components/RegisterForm";
 import Layout from "@layouts/Layout.astro";
+import { getUser } from "@lib/utils";
+
+// Verificar si el usuario ya tiene una sesión activa
+const sessionCookie = Astro.cookies.get("session")?.value ?? null;
+if (sessionCookie) {
+  const user = await getUser(sessionCookie);
+  // Si el usuario ya tiene una sesión válida, redirigir al dashboard.
+  if (user) {
+    return Astro.redirect("/dashboard/", 302);
+  }
+}
 ---
 
-<Layout title="Sign up">
-  <main class="w-full h-full flex flex-col items-center justify-center">
+<Layout title="Crear Cuenta - Rutas Éticas">
+  <main class="w-full h-full flex flex-col items-center justify-center p-4">
     <section class="w-full max-w-md">
-      <h1 class="font-semibold text-2xl text-white w-full mb-1">
+      <h1 class="font-semibold text-2xl dark:text-zinc-100 text-zinc-900 w-full mb-1">
         Crear una nueva cuenta
       </h1>
-      <p class="text-zinc-400 text-sm mb-8 w-full">
+      <p class="dark:text-zinc-400 text-zinc-500 text-sm mb-8 w-full">
         ¿Ya tienes una cuenta? <a
           href="/signin"
-          class="text-blue-400 font-medium"
+          class="dark:text-blue-400 text-blue-500 underline underline-offset-2 font-medium"
+          >Inicia sesión</a
         >
-          Inicia sesión
-        </a>
       </p>
       <RegisterForm client:load />
     </section>
