--- a/src/pages/add.astro
+++ b/src/pages/add.astro
@@ -2,6 +2,7 @@
 import Layout from "@layouts/Layout.astro";
 import AppLayout from "@layouts/AppLayout.astro";
 import EthicalRouteDropzone from "@components/EthicalRouteDropzone";
+import ArrowLeftIcon from "@components/icons/ArrowLeftIcon";
 ---
 
 <Layout title="Agregar Caso Ético - Rutas Éticas">
@@ -12,19 +13,7 @@ import EthicalRouteDropzone from "@components/EthicalRouteDropzone";
           href="/dashboard/"
           class="flex text-zinc-500 gap-1 items-center mb-4 text-sm hover:text-zinc-600 dark:hover:text-zinc-400 transition-colors duration-150"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            class="w-4 h-4"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M19.5 12h-15m0 0l6.75 6.75M4.5 12l6.75-6.75"></path>
-          </svg>
+          <ArrowLeftIcon class="w-4 h-4" />
           Regresar al Dashboard
         </a>
         <h1
