--- a/src/pages/edit/[id].astro
+++ b/src/pages/edit/[id].astro
@@ -2,6 +2,7 @@
 import Layout from "@layouts/Layout.astro";
 import AppLayout from "@layouts/AppLayout.astro";
 import EditEthicalRoute from "@components/EditEthicalRoute";
+import ArrowLeftIcon from "@components/icons/ArrowLeftIcon";
 import { firestore } from "@lib/firebase/server";
 import type { EthicalRouteTypeWithId } from "@lib/types";
 
@@ -55,15 +56,29 @@ const pageTitle = routeData?.question
 
 <Layout title={`${pageTitle} - Rutas Éticas`}>
   <AppLayout>
-    {
-      routeData && id ? (
-        <EditEthicalRoute client:load id={id} initialData={routeData} />
-      ) : (
-        <p class="text-center text-red-500 dark:text-red-400 p-8">
-          No se pudo cargar la información del caso ético para editar o el ID no
-          es válido.
-        </p>
-      )
-    }
+    <main class="w-full mx-auto max-w-3xl mt-10 flex flex-col items-center">
+      <div class="w-full flex flex-col">
+        <a
+          href="/dashboard/"
+          class="flex text-zinc-500 gap-1 items-center mb-4 text-sm hover:text-zinc-600 dark:hover:text-zinc-400 transition-colors duration-150"
+        >
+          <ArrowLeftIcon class="w-4 h-4" />
+          Volver al dashboard
+        </a>
+        <h1 class="font-semibold sm:text-2xl text-xl dark:text-zinc-100 text-zinc-900 w-full mb-4">
+          {pageTitle}
+        </h1>
+      </div>
+      {
+        routeData && id ? (
+          <EditEthicalRoute client:load id={id} initialData={routeData} />
+        ) : (
+          <p class="text-center text-red-500 dark:text-red-400 p-8">
+            No se pudo cargar la información del caso ético para editar o el ID no
+            es válido.
+          </p>
+        )
+      }
+    </main>
   </AppLayout>
 </Layout>
