--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -15,6 +15,15 @@ if (sessionCookie) {
 
 <Layout title="Iniciar Sesión - Rutas Éticas">
   <main class="w-full h-full flex flex-col items-center justify-center p-4">
+    <a href="/" class="mb-8 flex justify-center">
+      <img
+        src="/images/logo-background.svg"
+        alt="Logo de Rutas Éticas"
+        width="80"
+        height="80"
+        class="rounded-full object-cover shadow-md hover:scale-105 transition"
+      />
+    </a>
     <section class="w-full max-w-md">
       <h1
         class="font-semibold text-2xl dark:text-zinc-100 text-zinc-900 w-full mb-1"
