--- a/src/layouts/AppLayout.astro
+++ b/src/layouts/AppLayout.astro
@@ -1,45 +1,65 @@
 ---
+// @ts-ignore
 import SignoutButton from "@components/SignoutButton";
 import AddIcon from "@components/icons/AddIcon";
+import DocumentIcon from "@components/icons/DocumentIcon";
 const user = Astro.locals.user;
 ---
 
-<nav class="dark:bg-zinc-950 bg-zinc-50 border-b dark:border-zinc-800">
-  <div class="p-4 flex justify-between items-center max-w-4xl mx-auto">
-    <div
-      class="text-lg font-semibold text-zinc-900 hover:text-violet-800 dark:hover:text-white dark:text-zinc-100 flex gap-2 items-center"
-    >
-      <img
-        loading="lazy"
-        width="60"
-        src="/images/logo.webp"
-        alt="member photo"
-        class="rounded-full object-cover"
-      />
-      Rutas éticas
-    </div>
-    <div class="flex gap-3 items-center">
+<nav
+  class="dark:bg-zinc-950 bg-zinc-50 border-b dark:border-zinc-800 sticky top-0 z-50"
+>
+  <div
+    class="px-3 sm:px-4 py-2 sm:py-3 flex justify-between items-center max-w-4xl mx-auto"
+  >
+    <a href="/dashboard" class="flex items-center gap-2">
+      <div class="flex items-center">
+        <img
+          loading="lazy"
+          width="50"
+          height="50"
+          src="/images/logo.webp"
+          alt="Logo de Rutas Éticas"
+          class="w-10 h-10 sm:w-12 sm:h-12 md:w-14 md:h-14 rounded-full object-cover"
+        />
+        <span
+          class="ml-2 text-base sm:text-lg md:text-xl font-semibold text-zinc-900 hover:text-violet-800 dark:hover:text-white dark:text-zinc-100"
+        >
+          Rutas éticas
+        </span>
+      </div>
+    </a>
+    <div class="flex items-center space-x-2 sm:space-x-3">
       {
         user && !user.isAdmin && (
-          <>
+          <div class="flex items-center space-x-2">
             <a
-              class="flex gap-1 text-violet-600 hover:text-violet-700 border border-violet-200 dark:border-violet-800 dark:hover:border-violet-500 dark:hover:text-white hover:border-violet-300 dark:text-violet-200 dark:bg-violet-800 dark:hover:bg-violet-700 bg-violet-200 px-3 py-1 rounded-md font-medium"
+              class="flex items-center gap-1 text-violet-600 hover:text-violet-700 border border-violet-200 dark:border-violet-800 dark:hover:border-violet-500 dark:hover:text-white hover:border-violet-300 dark:text-violet-200 dark:bg-violet-800/80 dark:hover:bg-violet-700/90 bg-violet-100 hover:bg-violet-50 px-2 sm:px-3 py-1.5 sm:py-1 rounded-md text-sm sm:text-base font-medium transition-colors duration-200"
               href="/add/"
+              aria-label="Añadir nueva ruta"
             >
-              <span>Nuevo</span>
-              <AddIcon class="w-6 h-6" />
+              <span class="hidden sm:inline">Nuevo</span>
+              <AddIcon class="w-5 h-5 sm:ml-1" />
             </a>
             <a
-              class="flex gap-1 text-blue-600 hover:text-blue-700 border border-blue-200 dark:border-blue-800 dark:hover:border-blue-500 dark:hover:text-white hover:border-blue-300 dark:text-blue-200 dark:bg-blue-800 dark:hover:bg-blue-700 bg-blue-200 px-3 py-1 rounded-md font-medium"
+              class="flex items-center gap-1 text-blue-600 hover:text-blue-700 border border-blue-200 dark:border-blue-800 dark:hover:border-blue-500 dark:hover:text-white hover:border-blue-300 dark:text-blue-200 dark:bg-blue-800/80 dark:hover:bg-blue-700/90 bg-blue-100 hover:bg-blue-50 px-2 sm:px-3 py-1.5 sm:py-1 rounded-md text-sm sm:text-base font-medium transition-colors duration-200"
               href="/all/"
+              aria-label="Ver todas las rutas"
             >
-              <span>Ver todos</span>
+              <span class="hidden sm:inline whitespace-nowrap">Ver todos</span>
+              <DocumentIcon class="w-5 h-5 sm:ml-1" />
             </a>
-          </>
+          </div>
         )
       }
-      <SignoutButton client:idle />
+      <div class="ml-1 sm:ml-0">
+        <SignoutButton
+          className="w-10 h-10 sm:w-auto sm:h-auto flex items-center justify-center text-lg"
+        />
+      </div>
     </div>
   </div>
 </nav>
-<slot />
+<div class="flex-1 p-5">
+  <slot />
+</div>
